# axum-todo-app

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs  router.rs
src/middleware/: require_authentication.rs
src/queries/: task_queries.rs  user_queries.rs
src/routes/tasks/: create_task.rs  create_task_extractor.rs  delete_task.rs  get_all_tasks.rs  get_one_task.rs  mod.rs  update_tasks.rs
src/routes/users/: create_user.rs  login.rs  logout.rs  mod.rs
src/utils/: app_error.rs  hash.rs  jwt.rs
