[package]
name = "axum-todo-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["macros", "headers"] }
bcrypt = "0.14.0"
chrono = "0.4.26"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
sea-orm = { version = "0.11.3", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
serde_with = "3.1.0"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
validator = { version = "0.16.1", features = ["derive"] }
